--- a/SliderDemo/Base.lproj/Main.storyboard
+++ b/SliderDemo/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HV7-3s-SXG" userLabel="Slider 1" customClass="SliderControl" customModule="SliderDemo" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HV7-3s-SXG" userLabel="Slider" customClass="SliderControl" customModule="SliderDemo" customModuleProvider="target">
                                 <rect key="frame" x="16" y="249" width="288" height="70"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -86,22 +86,40 @@
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact" axis="vertical"/>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CE0-tY-8Si">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CE0-tY-8Si">
                                 <rect key="frame" x="258" y="201" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="2Ys-KQ-igP"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="didTouchButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HkO-hA-fvG"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="bGs-LC-ard" customClass="SliderControl" customModule="SliderDemo" customModuleProvider="target">
+                                <rect key="frame" x="60" y="20" width="200" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="3LI-Ds-AoQ"/>
+                                    <constraint firstAttribute="height" constant="60" id="61A-XS-38f"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="slider1ValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Zev-8F-2gX"/>
+                                </connections>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="z5E-aI-qxA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="15" id="6pp-4U-Ocs"/>
                             <constraint firstItem="HV7-3s-SXG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="9HC-6y-RSr"/>
+                            <constraint firstItem="CE0-tY-8Si" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="9Nz-zJ-FCh"/>
                             <constraint firstAttribute="trailing" secondItem="z5E-aI-qxA" secondAttribute="trailing" constant="15" id="9Z2-nC-wvg"/>
+                            <constraint firstItem="bGs-LC-ard" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Czl-7F-Nb2"/>
+                            <constraint firstItem="HV7-3s-SXG" firstAttribute="top" secondItem="CE0-tY-8Si" secondAttribute="bottom" constant="18" id="HAK-Ro-QdD"/>
                             <constraint firstItem="HV7-3s-SXG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="LTw-zx-NC4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CE0-tY-8Si" secondAttribute="trailing" constant="16" id="MD7-nW-lHi"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HV7-3s-SXG" secondAttribute="trailing" constant="16" id="eyt-a5-PTD"/>
+                            <constraint firstItem="bGs-LC-ard" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tSn-NM-fOE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="z5E-aI-qxA" secondAttribute="bottom" constant="20" id="xFr-ST-1vU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -109,13 +127,14 @@
                     <connections>
                         <outlet property="heightConstraint" destination="OTX-Kp-80n" id="PDN-PB-fdo"/>
                         <outlet property="slider" destination="HV7-3s-SXG" id="z4c-Ue-7zq"/>
+                        <outlet property="slider1" destination="bGs-LC-ard" id="U7o-uE-0kz"/>
                         <outlet property="slider3" destination="jVe-cs-lmL" id="DX1-2g-D5g"/>
                         <outlet property="slider4" destination="npk-7L-XHA" id="EsZ-mk-Qwq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="133.5832083958021"/>
+            <point key="canvasLocation" x="138.75" y="133.09859154929578"/>
         </scene>
     </scenes>
 </document>
